# saou_nic

./: .editorconfig  .eslintrc.json  .gitignore  .prettierrc  BILLING_TEST_GUIDE.md  FRONTEND_IMPLEMENTATION_GUIDE.md  KILLER_FEATURES_EXECUTION_SUMMARY.md  KILLER_FEATURES_PLAN.md  LICENSE  Makefile  PHASE_2_3_IMPLEMENTATION.md  PRESENTATION.md  PROJECT_AUDIT_AND_PAYMENT_SYSTEM.md  PROJECT_METHODS_STRUCTURE.md  PROJECT_STRUCTURE.txt  QUICK_START.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd.yml  ci.yml  codeql.yml
.qwen/: settings.json
docs/: LLM_SETUP.md  PROJECT_FULL_DOCUMENTATION.md
docs/api/: interview-module.openapi.yaml  interview-ws-events.v1.md
docs/development/: local-startup-checklist.md
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/public/: index.html  manifest.json
frontend/src/: main.tsx  vite-env.d.ts
infrastructure/docker/: .env.example  docker-compose-local.yml  docker-compose.dev.yml  docker-compose.monitoring.yml  (+2 more)
scripts/: grant-admin.sh  run-migrations.sh  set-llm-key.sh
services/ai-service/: .env.example  Dockerfile  pyproject.toml  requirements.txt
services/ai-service/src/: __init__.py  config.py  main.py
services/ai-service/src/api/: __init__.py  dependencies.py  routes.py
services/ai-service/src/core/: __init__.py  embeddings.py  llm_client.py  prompt_templates.py
services/ai-service/src/models/: responses.py  schemas.py
services/ai-service/src/services/: __init__.py  analysis_service.py  question_service.py  transcription_service.py
services/ai-service/src/utils/: helpers.py  validators.py
services/ai-service/tests/: TEST_REPORT_2026-04-26.md  __init__.py  test_api.py  test_services.py
(+581 files in other folders)
